Updated for PIC32Dev board

--- a/bootloaders/chipKIT-Bootloaders/nbproject/Makefile-genesis.properties
+++ b/bootloaders/chipKIT-Bootloaders/nbproject/Makefile-genesis.properties
@@ -1,59 +1,62 @@
 #
-#Sun Oct 28 20:49:42 CDT 2012
+#Thu Dec 20 09:57:36 EST 2012
 MX1_EXAMPLE_UART.languagetoolchain.version=2.02
-MX7_UART.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX4_UBW32_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+MX7_UART.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX4_UBW32_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX2_FB_MINI_USB.languagetoolchain.version=2.02
 MX4cK.languagetoolchain.version=2.02
-MX4_UART.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+MX4_UART.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX7cK.languagetoolchain.version=2.02
-MX7cK.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-uC32.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+MX7cK.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+uC32.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MAX32.languagetoolchain.version=2.02
 UNO32.languagetoolchain.version=2.02
-UNO32.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+UNO32.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX4_USB.languagetoolchain.version=2.02
-MX7cK_USB_SPLIT_FLASH.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX7_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX3cK_512.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX2_FB_MINI_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX1_EXAMPLE_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
+MX7cK_USB_SPLIT_FLASH.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX7_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX3cK_512.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX2_FB_MINI_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX1_EXAMPLE_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+PIC32DEV_USB.languagetoolchain.version=2.02
 MX3cK_128.languagetoolchain.version=2.02
-MX4_FB_SD_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX3cK_128.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
+MX4_FB_SD_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX3cK_128.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
 MX7_USB.languagetoolchain.version=2.02
-MAX32.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX2_EBBV3_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX3cK_512.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+PIC32DEV_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+PIC32DEV_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MAX32.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX2_EBBV3_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX3cK_512.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX4_UART.languagetoolchain.version=2.02
 MX4_UBW32_USB.languagetoolchain.version=2.02
-MX7_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
+MX7_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
 MX3cK_512.languagetoolchain.version=2.02
 uC32.languagetoolchain.version=2.02
-MX4_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MAX32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX7_UWB32_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-host.platform=windows
-MX4_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ef199adcc8f049579a105cca20571dcb
+MX4_UART.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MAX32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+host.platform=mac
+MX4_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d94e033fce233e60ccb9abf3a212a9b7
 MX4_FB_SD_USB.languagetoolchain.version=2.02
-MX7_UWB32_USB.languagetoolchain.version=2.02
-uC32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
+MX7_UWB32_USB.languagetoolchain.version=1.20
+MX7_UWB32_USB.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=22386ffefe86e3345e61077f7e3a2695
+uC32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
 MX2_EBBV3_USB.languagetoolchain.version=2.02
-MX4cK.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX4cK.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX4_UBW32_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-conf.ids=UNO32,MAX32,MX1_EXAMPLE_UART,MX2_EBBV3_USB,MX2_FB_MINI_USB,MX3cK_128,MX3cK_512,MX4_USB,MX4_UART,MX4_UBW32_USB,MX4_FB_SD_USB,uC32,MX4cK,MX7cK,MX7_UART,MX7_USB,MX7cK_USB_SPLIT_FLASH,MX7_UWB32_USB
-MX4_FB_SD_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+MX4cK.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX4cK.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX4_UBW32_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+conf.ids=UNO32,MAX32,MX1_EXAMPLE_UART,MX2_EBBV3_USB,MX2_FB_MINI_USB,MX3cK_128,MX3cK_512,MX4_USB,MX4_UART,MX4_UBW32_USB,MX4_FB_SD_USB,uC32,MX4cK,MX7cK,MX7_UART,MX7_USB,MX7cK_USB_SPLIT_FLASH,MX7_UWB32_USB,PIC32DEV_USB
+MX4_FB_SD_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX7cK_USB_SPLIT_FLASH.languagetoolchain.version=2.02
-MX7cK_USB_SPLIT_FLASH.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
+MX7cK_USB_SPLIT_FLASH.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
 MX7_UART.languagetoolchain.version=2.02
-MX2_EBBV3_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-UNO32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX3cK_128.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX2_FB_MINI_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX7cK.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX7_UWB32_USB.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX1_EXAMPLE_UART.languagetoolchain.dir=C\:\\Program Files\\Microchip\\mplabc32\\v2.02\\bin
-MX4_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
-MX7_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=8c3e7170843951333ca08ea0bd47dfe2
+MX2_EBBV3_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+UNO32.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX3cK_128.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX2_FB_MINI_USB.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX7cK.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX7_UWB32_USB.languagetoolchain.dir=/Applications/microchip/xc32/v1.20/bin
+MX1_EXAMPLE_UART.languagetoolchain.dir=/Applications/microchip/mplabc32/v2.02/bin
+MX4_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
+MX7_USB.com-microchip-mplab-nbide-toolchainC32-C32LanguageToolchain.md5=aabef0d7135a3dc0b92e5cef3b447919
